<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Galacto Golf</string>
<string name="select_level_button_text">Play</string>
<string name="level_set_details_play_button">Play</string>
<string name="level_set_details_exit_button">No thanks</string>
<string name="level_set_details_high_scores_label">Top Rounds</string>
<string name="level_set_edit_name_label">Level set name</string>
<string name="level_set_edit_save_button">Save</string>
<string name="level_set_edit_description_label">Description</string>
<string name="message_popup_ok_button">Ok</string>
<string name="next_level_button">Next Level</string>
<string name="replay_level_button">Replay Level</string>
<string name="level_completed_label">Level Completed!</string>
<string name="level_set_completed_label">Round Completed!</string>
<string name="round_so_far_label">Scores this round</string>
<string name="level_set_score_total_label">Total:</string>
<string name="main_menu_preferences_button">Settings</string>
<string name="main_menu_how_to_play_button">How to play</string>
<string name="main_menu_exit_button">Exit</string>
<string name="show_fps_preference_label">Show FPS</string>
<string name="show_fps_summary_preference_label">Show number of Frames per second</string>
<string name="preferences_label">Settings</string>
<string name="sound_effects_summary_preference_label">Play sound effects</string>

<string name="sound_effects_preference_label">Sound effects</string>
<string name="how_to_play_text">Welcome to Galacto Golf, a gravity game! You are in this rocket.</string>
<string name="how_to_play_text2">Reach the wormhole to complete a hole.</string>
<string name="how_to_play_text3">Avoid hitting planets, moons and the red barriers.</string>
<string name="how_to_play_text4">You can bounce off green barriers.</string>
<string name="how_to_play_text5">Collect a star from 6 holes on a single course to unlock the next one.</string>

</resources>
