<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/LinearLayout01" android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:orientation="vertical"
	android:layout_margin="10px" android:padding="10px">
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/level_completed_label"
		android:textSize="12pt"></TextView>
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/round_so_far_label"></TextView>
	
	<TableLayout android:id="@+id/level_completed_score_table" android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:background="#FFFFFF" android:stretchColumns="*"
	>
	</TableLayout>
	<LinearLayout android:id="@+id/LinearLayout02"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/level_set_score_total_label"
			android:textSize="10pt"></TextView>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/level_set_score_total"
			android:textSize="10pt" android:text="&lt;n&gt;"></TextView>
	</LinearLayout>

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/next_level_button"
			android:text="@string/next_level_button" android:background="@drawable/selector" android:layout_gravity="center"></Button>





</LinearLayout>
