<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:background="@drawable/background"
	android:padding="20px">

	<AbsoluteLayout android:id="@+id/AbsoluteLayout01"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:minHeight="30px"></AbsoluteLayout>
	<TextView android:id="@+id/level_set_details_name"
		android:text="Untitled" android:layout_height="wrap_content"
		 android:textSize="14pt"
		android:layout_width="fill_parent" android:typeface="sans"
		></TextView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_height="wrap_content"
	android:layout_width="fill_parent">
	<TextView android:layout_height="wrap_content"
		android:id="@+id/level_set_details_high_scores_label" android:text="@string/level_set_details_high_scores_label"
		android:layout_width="fill_parent" android:textSize="12pt" android:layout_weight="1" android:textColor="#B2C4CD" ></TextView>
	<TextView android:layout_height="wrap_content"
		android:id="@+id/level_set_details_par" android:text="Par: 45"
		android:layout_width="fill_parent" android:textSize="12pt" android:layout_weight="2" android:textColor="#EDB958" ></TextView>
	</LinearLayout>
	<ListView android:layout_height="wrap_content" android:id="@+id/level_score_list"
		android:layout_weight="5" android:layout_width="fill_parent"
		android:padding="10px">
</ListView>
<TextView android:text="" android:id="@+id/level_set_details_message" android:textColor="#EDB958" android:textSize="10pt" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<LinearLayout android:id="@+id/level_set_details_stars_row"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:background="@android:color/transparent">
		
		<TextView android:layout_height="wrap_content"
			android:id="@+id/level_set_details_stars_label" android:text="Top Star score:"
			android:layout_width="fill_parent" android:textSize="10pt"  android:textColor="#B2C4CD"></TextView>
				<LinearLayout android:id="@+id/level_set_details_stars"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:background="@android:color/transparent" android:layout_gravity="center_vertical">
</LinearLayout>
	</LinearLayout>
			<TextView android:layout_height="wrap_content"
			android:id="@+id/level_set_details_stars_label" android:text="(Collect 6 stars on a single round to unlock the next level)"
			android:layout_width="fill_parent" android:textSize="5pt"
			android:textColor="#B2C4CD"></TextView>
	<TableLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1"  android:layout_margin="0px" >


<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1">
<Button android:layout_height="wrap_content" android:id="@+id/level_set_details_play_button" android:text="@string/level_set_details_play_button" android:layout_width="fill_parent" android:textSize="7pt" android:background="@drawable/selector" android:layout_weight="1" android:layout_margin="5px" android:typeface="sans"></Button>
<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/level_set_details_exit_button"  android:textSize="7pt"  android:id="@+id/level_set_details_exit_button" android:background="@drawable/selector" android:layout_weight="1" android:layout_margin="5px" android:typeface="sans"></Button>
</TableRow>

</TableLayout>




</LinearLayout>
